# log-collector

./: .gitignore  README.md  logc.py  pyproject.toml  test_logc.py
src/logc_tool/: __main__.py  logc.py
tests/: test_logc.py
