[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logc"
version = "0.2.3"
description = "Professional Junos log analysis and filtering tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "LGPL-3.0-or-later"}
authors = [
    {name = "Jairo Alberto Pérez Ovares", email = "jairo.perezovares31@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
logc = "logc_tool.logc:main"

[tool.setuptools.packages.find]
where = ["src"]